fixed z-index

--- a/src/components/Controls/Controls.css
+++ b/src/components/Controls/Controls.css
@@ -4,7 +4,7 @@ nav {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  z-index: 123522222222222222222222222;
+  z-index: 12322;
   background: linear-gradient(
     90deg,
     rgba(103, 102, 113, 1) 0%,
